[gd_scene load_steps=2 format=3 uid="uid://8n6nj8embvl0"]

[ext_resource type="Script" path="res://Assets/Modules/UI/Panels/UIExitLevelPanel.gd" id="1_w86n1"]

[node name="UIExitLevelPanel" type="CanvasLayer" node_paths=PackedStringArray("ExitButton", "ReturnButton")]
script = ExtResource("1_w86n1")
ExitButton = NodePath("Panel/ExitButton")
ReturnButton = NodePath("Panel/ReturnButton")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 33.0
offset_right = 64.0
offset_bottom = 56.0
grow_horizontal = 2
text = "Exit from level?"
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -11.5
offset_right = -24.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="ReturnButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -11.5
offset_right = 144.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "Back to game"
